--- a/RealmLoginKit Apple/Podfile
+++ b/RealmLoginKit Apple/Podfile
@@ -1,20 +1,18 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
-def shared_pods
-    # Pods for RealmLoginKit
-  pod 'TORoundedTableView'
-  pod 'Realm'
-end 
-
-target 'RealmLoginKitExample' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
+target 'RealmLoginKitExample-tvOS' do
+  platform :tvos, '9.0'
   use_frameworks!
-  shared_pods
+  pod 'Realm'
+end
+
+target 'RealmLoginKitExample-iOS' do
+  use_frameworks!
+  pod 'TORoundedTableView'
 end
 
 target 'RealmLoginKit' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-  shared_pods
+  pod 'TORoundedTableView'
+  pod 'Realm'
 end
