--- a/RealmLoginKit Android/app/src/main/AndroidManifest.xml
+++ b/RealmLoginKit Android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExampleActivity">
+        <activity
+            android:name=".ExampleActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
