--- a/RealmLoginKit Android/app/src/main/AndroidManifest.xml
+++ b/RealmLoginKit Android/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/DummyAppTheme">
         <activity
             android:name=".ExampleActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/DummyAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
