--- a/RealmLoginKit Android/app/src/main/AndroidManifest.xml
+++ b/RealmLoginKit Android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/DummyAppTheme">
+        android:supportsRtl="true">
         <activity
             android:name=".ExampleActivity"
             android:theme="@style/DummyAppTheme">
