--- a/RealmLoginKit Android/app/src/main/AndroidManifest.xml
+++ b/RealmLoginKit Android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest package="io.realm.realmloginkit.example"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
     <application
+        android:name=".ExampleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name="io.realm.realmloginkit.RealmLoginActivity">
 
         </activity>
