--- a/RealmLoginKit Apple/Podfile
+++ b/RealmLoginKit Apple/Podfile
@@ -8,13 +8,16 @@ def shared_pods
 end 
 
 target 'RealmLoginKitExample' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
   shared_pods
 end
 
 target 'RealmLoginKit' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
+  use_frameworks!
+  shared_pods
+end
+
+target 'RealmLoginKitExampleTests' do
   use_frameworks!
   shared_pods
 end
