--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: swift
 xcode_workspace: "RealmLoginKit Apple/RealmLoginKit.xcworkspace"
 xcode_scheme: RealmLoginKitExample
 podfile: "RealmLoginKit Apple/Podfile"
+
+before_install:
+  - pod repo update
