--- a/RealmLoginKit_Xamarin/LoginKitForms/LoginKitForms.csproj
+++ b/RealmLoginKit_Xamarin/LoginKitForms/LoginKitForms.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="LoginKitForms.cs" />
+    <Compile Include="LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
