--- a/RealmLoginKit_Xamarin/Examples/FormsExample.UWP/FormsExample.UWP.csproj
+++ b/RealmLoginKit_Xamarin/Examples/FormsExample.UWP/FormsExample.UWP.csproj
@@ -147,6 +147,12 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\LoginKitForms\LoginKitForms.csproj">
+      <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
+      <Name>LoginKitForms</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
