--- a/RealmLoginKit Apple/Podfile
+++ b/RealmLoginKit Apple/Podfile
@@ -2,7 +2,7 @@
 platform :ios, '9.0'
 
 def shared_pods
-  pod 'RealmLoginKit/AWSCognito', :path => 'RealmLoginKit.podspec'
+  pod 'RealmLoginKit', :path => 'RealmLoginKit.podspec'
 end 
 
 target 'RealmLoginKitExample' do
